deployment/k8s/staging/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compass-backend-deployment
  namespace: compass-stage
  labels:
    app: compass-backend
  annotations:
    forceReDeploy: "INITIAL_VALUE"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compass-backend
  template:
    metadata:
      labels:
        app: compass-backend
    spec:
      containers:
        - name: compass-backend-container
          image: pm4compass/compass-backend:latest # Update this with your backend image tag dynamically
          ports:
            - containerPort: 8080
          env:
            - name: APP_URL
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: APP_URL
            - name: SWAGGER_UI_ON
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: SWAGGER_UI_ON 
            - name: DOCKER_ON
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: DOCKER_ON
            - name: DDL_AUTO
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: DDL_AUTO
            - name: SECURITY_LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: SECURITY_LOG_LEVEL
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  name: postgres-configmap
                  key: DB_HOST
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: DB_USERNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: DB_PASSWORD
            - name: AUTH0_AUDIENCE
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_AUDIENCE
                  name: auth0-configmap
            - name: AUTH0_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_BASE_URL
                  name: auth0-configmap
            - name: AUTH0_ISSUER_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_ISSUER_BASE_URL
                  name: auth0-configmap
            - name: AUTH0_MGMT_AUDIENCE
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_MGMT_AUDIENCE
                  name: auth0-configmap
            - name: AUTH0_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: AUTH0_CLIENT_ID
                  name: auth0-secrets
            - name: AUTH0_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTH0_CLIENT_SECRET
                  name: auth0-secrets
            - name: AUTH0_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTH0_SECRET
                  name: auth0-secrets

      imagePullSecrets:
        - name: docker-credentials
